# cbor-diag-py

./: .gitignore  .readthedocs.yaml  Cargo.toml  NEWS.md  NEWS.rst  README.rst  doctest.txt  pyproject.toml
.github/workflows/: lint.yml  maturin.yml  readme.yml  verify-stubs.yml
doc/: conf.py  index.rst
python/cbor_diag/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_ellipsis.py  test_from999.py  test_seq.py
