[package]
name = "cbor-diag-python-package"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Conversion between CBOR and CBOR Diagnostic Notation"
repository = "https://github.com/chrysn/cbor-diag-py"
documentation = "https://cbor-diag.readthedocs.io"
# This is not published through crates.io, but through PyPI.
publish = false

[lib]
name = "_cbor_diag"
crate-type = ["cdylib"]

[dependencies]
cbor-edn = { version = "0.0.8", default-features = false }
pyo3 = "0.26.0"
