[package]
name = "cbor-diag-python-package"
version = "1.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Conversion between CBOR and CBOR Diagnostic Notation"
repository = "https://github.com/chrysn/cbor-diag-py"
documentation = "https://cbor-diag.readthedocs.io"
# This is not published through crates.io, but through PyPI.
publish = false

[lib]
name = "_cbor_diag"
# rlib for pyo3-stub-gen
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor-edn = { version = "0.0.8", default-features = false }
pyo3 = "0.28.0"
pyo3-stub-gen = { version = "0.20.0", default-features = false, features = ["infer_signature"] }
