[build-system]
requires = ["maturin>=1.9.0,<1.10"]
build-backend = "maturin"

[project]
name = "cbor-diag"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
]
dynamic = [
    "description",
    "license",
    "readme",
    "requires-python",
    # "urls", disabled, see project.urls
    "version",
]

[project.urls]
# Workaround for <https://github.com/PyO3/maturin/pull/2760>
Documentation = "https://cbor-diag.readthedocs.io"
"Source Code" = "https://github.com/chrysn/cbor-diag-py"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cbor_diag._cbor_diag"
