[build-system]
requires = ["maturin>=1.12.0,<1.13"]
build-backend = "maturin"

[project]
name = "cbor-diag"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
]
dynamic = [
    "description",
    "license",
    "readme",
    # "requires-python", disabled while we have an explicit one for pyo3-stubs-gen that needs to override PyO3's
    # "urls", disabled, see project.urls
    "version",
]
# due to pyo3-stubs-gen -- disable once we're back to "anything that pyo3 can do" (probably once that drops 3.9 support)
requires-python = ">=3.10"

[project.urls]
# Workaround for <https://github.com/PyO3/maturin/pull/2760>
Documentation = "https://cbor-diag.readthedocs.io"
"Source Code" = "https://github.com/chrysn/cbor-diag-py"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cbor_diag._cbor_diag"
