[build-system]
requires = ["maturin>=1.14.1,<1.15"]
build-backend = "maturin"

[project]
name = "cbor-diag"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
]
dynamic = [
    "description",
    "license",
    "readme",
    # "requires-python", disabled while we have an explicit one for pyo3-stubs-gen that needs to override PyO3's
    "urls",
    "version",
]
# due to pyo3-stubs-gen -- disable once we're back to "anything that pyo3 can do" (probably once that drops 3.9 support)
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cbor_diag._cbor_diag"

[tool.codespell]
ignore-words-list = ["EDN", "edn"]

[tool.maturin.generate-ci.github]
pytest = true
# `all = {}` doesn't seem to work here
manylinux = {}
linux = {}
musllinux = {}
windows = {}
macos = {}
emscripten = {}
android = {}
